--- a/leaderboard.html
+++ b/leaderboard.html
@@ -165,6 +165,22 @@ function getWeek(date) {
   const week1 = new Date(d.getFullYear(),0,4);
   return 1 + Math.round(((d - week1) / 86400000 - 3 + (week1.getDay() + 6) % 7) / 7);
 }
+function getMondayStart(d) {
+  const x = new Date(d);
+  x.setHours(0,0,0,0);
+  const day = x.getDay(); // Sun=0, Mon=1, ...
+  const diff = (day === 0 ? -6 : 1 - day); // move back to Monday
+  x.setDate(x.getDate() + diff);
+  return x;
+}
+
+// Parses "YYYY-MM-DD" into a LOCAL date at 00:00
+function parseLocalDate(yyyy_mm_dd) {
+  const m = /^(\d{4})-(\d{2})-(\d{2})$/.exec(yyyy_mm_dd);
+  if (!m) return null;
+  const y = Number(m[1]), mo = Number(m[2]) - 1, da = Number(m[3]);
+  return new Date(y, mo, da, 0, 0, 0, 0);
+}
 
 function escapeHtml(s) {
   return String(s).replace(/[&<>"']/g, c => ({
