--- a/leaderboard.html
+++ b/leaderboard.html
@@ -59,7 +59,7 @@ h1 {
 <div class="toggle">
   <button id="weekBtn" class="active" onclick="loadLeaderboard('week')">This Week</button>
   <button id="allBtn" onclick="loadLeaderboard('all')">All Time</button>
-  <button id="dayBtn" class="toggle" onclick="loadLeaderboard('day')">Today</button>
+  <button id="dayBtn" onclick="loadLeaderboard('day')">Today</button>
 </div>
 
 <div id="list"></div>
