--- a/leaderboard.html
+++ b/leaderboard.html
@@ -45,7 +45,111 @@ h1 {
   margin-bottom: 8px;
   display: flex;
   justify-content: space-between;
+
+  cursor: pointer;
+  transition: transform 0.08s ease, box-shadow 0.12s ease;
 }
+  .card:hover {
+  transform: translateY(-1px);
+  box-shadow: 0 6px 16px rgba(0,0,0,0.06);
+}
+
+.badge {
+  font-weight: 700;
+  margin-right: 8px;
+}
+
+.fade-in {
+  animation: fadeIn 160ms ease;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(3px); }
+  to   { opacity: 1; transform: translateY(0); }
+}
+
+/* Modal */
+.modal {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.35);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  z-index: 9999;
+}
+
+.modal.open { display: flex; }
+
+.modal-box {
+  width: 100%;
+  max-width: 520px;
+  background: #fff;
+  border-radius: 12px;
+  padding: 14px;
+  box-shadow: 0 18px 60px rgba(0,0,0,0.18);
+}
+
+.modal-head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+  margin-bottom: 10px;
+}
+
+.modal-title {
+  font-size: 18px;
+  font-weight: 800;
+}
+
+.modal-close {
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 10px;
+  padding: 8px 10px;
+  cursor: pointer;
+}
+
+.modal-close:hover { background: #f5f5f5; }
+
+.history {
+  max-height: 60vh;
+  overflow: auto;
+  padding-right: 4px;
+}
+
+.entry {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid #eee;
+  margin-bottom: 8px;
+}
+
+.entry .meta { color: #666; font-size: 13px; }
+.entry .pts  { font-weight: 800; }
+
+.pills {
+  display: flex;
+  gap: 6px;
+  margin-top: 4px;
+  flex-wrap: wrap;
+}
+
+.pill {
+  font-size: 12px;
+  padding: 4px 8px;
+  border-radius: 999px;
+  border: 1px solid #eee;
+  background: #fafafa;
+}
+
+
+  
 </style>
 </head>
 
