--- a/index.html
+++ b/index.html
@@ -129,6 +129,17 @@
     font-size: 13px;
     margin-top: 10px;
   }
+
+#name {
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  background: #fafafa;
+  box-sizing: border-box;
+}
+
+  
 </style>
 
 </head>
@@ -141,7 +152,27 @@
 </p>
 
 <div class="card">
-  <input id="name" placeholder="Your name" />
+  <!-- Identity -->
+<div id="identityBox" style="margin-bottom:14px;">
+  <div id="identitySaved" style="display:none; font-size:14px; color:#333;">
+    Checking in as <strong id="savedNameText"></strong>
+    <button id="changeNameBtn" type="button"
+      style="border:none;background:none;color:#6a00ff;cursor:pointer;padding:0;margin-left:6px;text-decoration:underline;">
+      change
+    </button>
+  </div>
+
+  <div id="identityEdit">
+    <label for="name" style="font-size:13px;color:#666;display:block;margin-bottom:6px;">
+      Your name
+    </label>
+    <input type="text" id="name" placeholder="e.g. Abramo" autocomplete="name">
+    <div style="font-size:12px;color:#888;margin-top:6px;">
+      Saved on this device.
+    </div>
+  </div>
+</div>
+
 <div class="rows">
   <div class="row">
     <div>
@@ -196,15 +227,48 @@ function calcTotal() {
 
 gym.onchange = steps.onchange = omad.onchange = calcTotal;
 
+const NAME_KEY = "momentum_name";
+
+function setIdentityUI(savedName) {
+  const saved = document.getElementById("identitySaved");
+  const edit = document.getElementById("identityEdit");
+  const savedText = document.getElementById("savedNameText");
+
+  if (savedName && savedName.trim()) {
+    savedText.textContent = savedName.trim();
+    saved.style.display = "block";
+    edit.style.display = "none";
+  } else {
+    saved.style.display = "none";
+    edit.style.display = "block";
+  }
+}
+
+function getSavedName() {
+  return localStorage.getItem(NAME_KEY) || "";
+}
+
+function saveNameIfValid() {
+  const input = document.getElementById("name");
+  const name = (input.value || "").trim();
+  if (!name) return "";
+  localStorage.setItem(NAME_KEY, name);
+  return name;
+}
+
+  
 let isSubmitting = false;
 
 function submitDay() {
   if (isSubmitting) return;
 
-  const nameInput = document.getElementById("name");
-  const name = nameInput.value.trim();
-  localStorage.setItem("momentum_name", name);
-  if (!name) return alert("Enter your name");
+const name = saveNameIfValid();
+if (!name) {
+  alert("Please enter your name.");
+  return;
+}
+setIdentityUI(name);
+
 
   const btn = document.getElementById("submitBtn");
   const status = document.getElementById("statusMsg");
@@ -247,9 +311,19 @@ function submitDay() {
 }
 
 document.addEventListener("DOMContentLoaded", () => {
-  const saved = localStorage.getItem("momentum_name");
-  if (saved) document.getElementById("name").value = saved;
+  // Load saved name (if any) and set UI
+  const savedName = getSavedName();
+  if (savedName) document.getElementById("name").value = savedName;
+  setIdentityUI(savedName);
+
+  // Change button reveals input
+  document.getElementById("changeNameBtn").addEventListener("click", () => {
+    document.getElementById("identitySaved").style.display = "none";
+    document.getElementById("identityEdit").style.display = "block";
+    document.getElementById("name").focus();
+  });
 });
+
 
   
 </script>
