--- a/index.html
+++ b/index.html
@@ -225,6 +225,15 @@ function calcTotal() {
   return total;
 }
 
+function getLocalISODate() {
+  const d = new Date();
+  const y = d.getFullYear();
+  const m = String(d.getMonth() + 1).padStart(2, "0");
+  const day = String(d.getDate()).padStart(2, "0");
+  return `${y}-${m}-${day}`;
+}
+
+  
 gym.onchange = steps.onchange = omad.onchange = calcTotal;
 
 const NAME_KEY = "momentum_name";
@@ -279,8 +288,9 @@ setIdentityUI(name);
   btn.textContent = "Saving…";
   status.textContent = "";
 
-  const today = new Date().toISOString().slice(0,10);
+  const today = getLocalISODate();
   const payload = {
+    mode: "upsert",
     date: today,
     week: getWeek(today),
     player: name,
@@ -291,15 +301,19 @@ setIdentityUI(name);
   };
 
   fetch(SCRIPT_URL, {
-    method: "POST",
-    body: JSON.stringify(payload)
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify(payload)
+})
+  .then(r => r.json())
+  .then(out => {
+    const msg = out.action === "updated" ? "Updated ✔" : "Saved ✔";
+    status.textContent = msg;
+    alert(msg);
+    setTimeout(() => status.textContent = "", 1600);
   })
-  .then(r => r.json().catch(() => ({})))
-  .then(() => {
-    status.textContent = "Saved ✔";
-    alert("Saved ✔");
-  })
-  .catch(() => {
+  .catch(err => {
+    console.error(err);
     status.textContent = "Could not save — try again.";
     alert("Could not save — try again.");
   })
@@ -308,6 +322,7 @@ setIdentityUI(name);
     btn.disabled = false;
     btn.textContent = oldText;
   });
+
 }
 
 document.addEventListener("DOMContentLoaded", () => {
