--- a/index.html
+++ b/index.html
@@ -302,9 +302,27 @@ setIdentityUI(name);
 
   fetch(SCRIPT_URL, {
   method: "POST",
+  headers: { "Content-Type": "application/json" },
   body: JSON.stringify(payload)
 })
   .then(r => r.json())
+  .then(out => {
+    const msg = out.action === "updated" ? "Updated ✔" : "Saved ✔";
+    status.textContent = msg;
+    alert(msg);
+    setTimeout(() => status.textContent = "", 1600);
+  })
+  .catch(err => {
+    console.error(err);
+    status.textContent = "Could not save — try again.";
+    alert("Could not save — try again.");
+  })
+  .finally(() => {
+    isSubmitting = false;
+    btn.disabled = false;
+    btn.textContent = oldText;
+  });
+
   .then(out => {
     const msg = out.action === "updated" ? "Updated ✔" : "Saved ✔";
     status.textContent = msg;
