--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 
   <div class="row">
     <div>
-      <div class="title">10,000 steps (4)</div>
-      <div class="sub">Walking counts — any steps toward the goal</div>
+      <div class="title">Cardio (4)</div>
+      <div class="sub">Personal cardio goal (e.g. 10,000 steps, 30 minutes cardio)</div>
     </div>
     <input type="checkbox" id="steps">
   </div>
