--- a/leaderboard.html
+++ b/leaderboard.html
@@ -496,7 +496,7 @@ const entryDate = isNaN(d.getTime())
     // Build pills
     const pills = [];
     if (gym) pills.push("Gym");
-    if (steps) pills.push("10k");
+    if (steps) pills.push("Cardio");
     if (omad) pills.push("Diet");
 
     // Weekly bonus pill (based on the week this entry falls in)
